side bar + plan + lecteur + whoswho faits en accueil

--- a/src/InstantSoin/ProductBundle/Resources/config/routing.yml
+++ b/src/InstantSoin/ProductBundle/Resources/config/routing.yml
@@ -24,3 +24,12 @@ Accueil_sidebar:
     requirements:
         _method:  GET
 
+whoswho:
+    pattern:  /whoswho
+    defaults: { _controller: ProductBundle:Accueil:whoswho }
+    requirements:
+        _method:  GET
+
+Lien_Clairjoie:
+    pattern:  /clairjoie
+    defaults: { _controller: ProductBundle:Accueil:clairjoie }
