--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,12 +1,41 @@
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+        InstantSoin\UserBundle\Entity\User: plaintext
+
+    role_hierarchy:
+        ROLE_ADMIN:           ROLE_ADMIN
+        ROLE_ESTHETICIENNE:   ROLE_ESTHETICIENNE
+        ROLE_USER:            ROLE_USER
+
     providers:
-        in_memory:
-            memory: ~
+        main:
+            entity: { class: InstantSoin\UserBundle\Entity\User, property: username }
 
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        main:
+            pattern:   ^/
+            anonymous: true
+            provider:  main
+            form_login:
+                 login_path:  login
+                 check_path:  login_check
+                 remember_me: true
+                 success_handler: RedirectionApresLogin
+            logout:
+                 path: logout
+                 target: /
+            remember_me:
+                 key:      "%secret%"
 
-        default:
-            anonymous: ~
+                 lifetime: 31536000
+                 path:     /
+                 domain:   ~
+    access_control:
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/estheticienne, roles: [ ROLE_ESTHETICIENNE, ROLE_ADMIN ] }
+        - { path: ^/profil, roles: [ ROLE_USER, ROLE_ESTHETICIENNE, ROLE_ADMIN ] }
