sidebar admin et estheticienne + baseadmin et estheticienne + routin et controlers sidebar

--- a/src/InstantSoin/ProductBundle/Resources/config/routing.yml
+++ b/src/InstantSoin/ProductBundle/Resources/config/routing.yml
@@ -104,6 +104,12 @@ Accueil_sidebar:
     requirements:
         _method:  GET
 
+Estheticienne_sidebar:
+    pattern:  /Estheticienne_sidebar
+    defaults: { _controller: UserBundle:Estheticienne:sidebar_estheticienne }
+    requirements:
+        _method:  GET
+
 whoswho:
     pattern:  /whoswho
     defaults: { _controller: ProductBundle:Accueil:whoswho }
