--- a/src/InstantSoin/ProductBundle/Resources/config/services.yml
+++ b/src/InstantSoin/ProductBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
 services:
-#    product.example:
-#        class: InstantSoin\ProductBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    instantsoin_product.form.fournisseur:
+        class: InstantSoin\ProductBundle\Form\FournisseursType
+        tags:
+            - { name: fournisseurs.type, alias: fournisseurs }
