plusieurs modifs et création css et controleurs

--- a/src/InstantSoin/ProductBundle/Resources/config/routing.yml
+++ b/src/InstantSoin/ProductBundle/Resources/config/routing.yml
@@ -182,7 +182,7 @@ updateSupplier:
 
 
 deleteSupplier:
-    pattern:  /deleteSupplier
+    pattern:  /deleteSupplier/{nom}
     defaults: { _controller: ProductBundle:SupplierAdmin:deleteSupplier }
     requirements:
         _method:  GET
