modif css et messages flash debut tx sur panier et simplification code

--- a/src/InstantSoin/ProductBundle/Resources/config/routing.yml
+++ b/src/InstantSoin/ProductBundle/Resources/config/routing.yml
@@ -2,6 +2,10 @@ product_homepage:
     path:     /
     defaults: { _controller: ProductBundle:Accueil:accueil }
 
+panier:
+   pattern:   /panier
+   defaults:  { _controller: ProductBundle:Panier:show_panier }
+
 
 #ROUTING PRODUCTS
 
