--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "doctrine/doctrine-fixtures-bundle": "dev-master"
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "jms/payment-core-bundle": "dev-master",
+        "stof/doctrine-extensions-bundle": "dev-master",
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
