--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+cart:
+    resource: "@CartBundle/Resources/config/routing.yml"
+    prefix:   /
+
 product:
     resource: "@ProductBundle/Resources/config/routing.yml"
     prefix:   /
