--- a/src/InstantSoin/CartBundle/Resources/config/routing.yml
+++ b/src/InstantSoin/CartBundle/Resources/config/routing.yml
@@ -9,3 +9,10 @@ to_cart:
     defaults:  { _controller: CartBundle:Cart:to_cart }
     requirements:
         _method:  POST
+
+
+tobd:
+    pattern:   /tobd/
+    defaults:  { _controller: CartBundle:Cart:tobd }
+    requirements:
+        _method:  GET
