panier refait en partie

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,5 @@
-cart:
-    resource: "@CartBundle/Resources/config/routing.yml"
+order:
+    resource: "@OrderBundle/Resources/config/routing.yml"
     prefix:   /
 
 product:
