--- a/src/InstantSoin/OrderBundle/Resources/config/services.yml
+++ b/src/InstantSoin/OrderBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    cart.example:
-#        class: InstantSoin\CartBundle\Example
+#    order.example:
+#        class: InstantSoin\OrderBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
