presque la fin du panier

--- a/src/InstantSoin/OrderBundle/Resources/config/routing.yml
+++ b/src/InstantSoin/OrderBundle/Resources/config/routing.yml
@@ -9,3 +9,8 @@ to_cart:
     requirements:
         _method:  POST
 
+emptyCart:
+    pattern:  /emptyCart/
+    defaults: { _controller: OrderBundle:Cart:emptyCart }
+    requirements:
+        _method:  POST
